--- a/workout-tracker/requirements.txt
+++ b/workout-tracker/requirements.txt
@@ -24,6 +24,8 @@ exceptiongroup==1.2.2
     # via anyio
 fastapi==0.115.2
     # via -r requirements.in
+greenlet==3.1.1
+    # via sqlalchemy
 h11==0.14.0
     # via uvicorn
 httptools==0.6.2
@@ -49,6 +51,8 @@ pyyaml==6.0.2
     # via uvicorn
 sniffio==1.3.1
     # via anyio
+sqlalchemy[asyncio]==2.0.35
+    # via -r requirements.in
 starlette==0.40.0
     # via fastapi
 typing-extensions==4.12.2
@@ -57,6 +61,7 @@ typing-extensions==4.12.2
     #   fastapi
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
     #   uvicorn
 uvicorn[standard]==0.31.1
     # via -r requirements.in
